--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "license": "MIT",
   "types": "types/index.d.ts",
   "dependencies": {
-    "axios": "^0.26.0",
-    "tslib": "^2.3.1"
+    "axios": "^0.26.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
